@@ -8489,6 +8489,7 @@ Double Slim</property>
                 <property name="label" translatable="yes">gtk-add</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <signal name="clicked" handler="on_advfilter_add"/>
               </widget>
               <packing>
                 <property name="secondary">True</property>
@@ -8505,6 +8506,7 @@ Double Slim</property>
                 <property name="label" translatable="yes">gtk-open</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <signal name="clicked" handler="on_advfilter_open"/>
               </widget>
               <packing>
                 <property name="position">2</property>
@@ -8518,6 +8520,7 @@ Double Slim</property>
                 <property name="label" translatable="yes">gtk-save-as</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <signal name="clicked" handler="on_advfilter_save"/>
               </widget>
               <packing>
                 <property name="position">3</property>
@@ -8531,6 +8534,7 @@ Double Slim</property>
                 <property name="label" translatable="yes">gtk-clear</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <signal name="clicked" handler="on_advfilter_clear"/>
               </widget>
               <packing>
                 <property name="position">4</property>
