@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-10-23  Piotr Ożarowski
+	* clean/restore search conditions in advfilter
+
 2008-10-19  Piotr Ożarowski
 	* Add more filter movie rules to the search window
 	* Screenplay and cameraman added to main/add windows
